login and layout finish
