# go-server/internal/handler/sys_user.go
@@ -3,6 +3,7 @@ package handler
 import (
 	"github.com/gin-gonic/gin"
 	"go-sun/go-server/internal/logic"
+	"go-sun/go-server/internal/models"
 	"go-sun/go-server/internal/svc"
 	"go-sun/go-server/internal/types"
 	"go-sun/go-server/pkg/utils/e"
@@ -34,4 +35,34 @@ func (c *SysUserHandler) Login(req *gin.Context) {
 		return
 	}
 	e.New(req).Data(e.SUCCESS, &types.UserLoginResp{Token: token})
+}
+
+// OutLogin 用户退出接口
+//
+//	@tags			user
+//	@id				userOutLogin
+//	@description	用户退出接口
+//	@Produce		json
+//	@Success		200		{object}	types.JsonResp{data=[]string}	"成功"
+//	@Router			/v1/user/out.login [get]
+func (c *SysUserHandler) OutLogin(req *gin.Context) {
+	e.New(req).Msg(e.SUCCESS)
+}
+
+// GetInfo 获取用户信息
+//
+//	@tags			user
+//	@id				getUserInfo
+//	@description	获取用户信息
+//	@Produce		json
+//	@Success		200		{object}	types.JsonResp{data=types.GetUserInfoResp}	"成功"
+//	@Router			/v1/user/info/get [get]
+func (c *SysUserHandler) GetInfo(req *gin.Context) {
+	userId := req.GetInt("userId")
+	userModel := models.NewSysUser().GetInfo(userId)
+	resp := &types.GetUserInfoResp{}
+	resp.RealName = userModel.RealName
+	resp.Status = userModel.Status
+	resp.Avatar = "https://gw.alipayobjects.com/zos/antfincdn/efFD%24IOql2/weixintupian_20170331104822.jpg"
+	e.New(req).Data(e.SUCCESS, resp)
 }
