# go-server/internal/models/sys_user.go
@@ -22,3 +22,9 @@ func (m *SysUser) GetLoginInfo(username string, password string) *SysUser {
 	svc.Ctx.Db.Select("id,status").Where("username=? and password=?", username, password).Find(m)
 	return m
 }
+
+// GetInfo 获取用户信息
+func (m *SysUser) GetInfo(id int) *SysUser {
+	svc.Ctx.Db.Select("id,username,real_name,status").Where("id = ?", id).Find(m)
+	return m
+}
